logs/dj-arp-storm.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/pygame'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Logbook-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/backports'...
Listing './lib/python3.5/site-packages/backports/configparser'...
Listing './lib/python3.5/site-packages/configparser-3.5.0.egg-info'...
Listing './lib/python3.5/site-packages/dj_arp_storm'...
Compiling './lib/python3.5/site-packages/dj_arp_storm/netsound.py'...
***   File "./lib/python3.5/site-packages/dj_arp_storm/netsound.py", line 69
    except KeyError, IndexError:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dj_arp_storm-1.0b4.dist-info'...
Listing './lib/python3.5/site-packages/logbook'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/netifaces-0.10.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/py'...
Listing './lib/python3.5/site-packages/py/_code'...
Listing './lib/python3.5/site-packages/py/_io'...
Listing './lib/python3.5/site-packages/py/_log'...
Listing './lib/python3.5/site-packages/py/_path'...
Listing './lib/python3.5/site-packages/py/_process'...
Listing './lib/python3.5/site-packages/py/_vendored_packages'...
Listing './lib/python3.5/site-packages/py-1.5.2.dist-info'...
Listing './lib/python3.5/site-packages/pygame'...
Listing './lib/python3.5/site-packages/pygame/.libs'...
Listing './lib/python3.5/site-packages/pygame/docs'...
Listing './lib/python3.5/site-packages/pygame/docs/ref'...
Listing './lib/python3.5/site-packages/pygame/examples'...
Listing './lib/python3.5/site-packages/pygame/examples/data'...
Listing './lib/python3.5/site-packages/pygame/examples/macosx'...
Listing './lib/python3.5/site-packages/pygame/examples/macosx/aliens_app_example'...
Listing './lib/python3.5/site-packages/pygame/examples/macosx/aliens_app_example/English.lproj'...
Listing './lib/python3.5/site-packages/pygame/examples/macosx/aliens_app_example/English.lproj/MainMenu.nib'...
Listing './lib/python3.5/site-packages/pygame/gp2x'...
Listing './lib/python3.5/site-packages/pygame/tests'...
Listing './lib/python3.5/site-packages/pygame/tests/fixtures'...
Listing './lib/python3.5/site-packages/pygame/tests/fixtures/fonts'...
Listing './lib/python3.5/site-packages/pygame/tests/fixtures/xbm_cursors'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests/all_ok'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests/everything'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests/exclude'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests/failures1'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests/incomplete'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests/incomplete_todo'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests/infinite_loop'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests/print_stderr'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests/print_stdout'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests/timeout'...
Listing './lib/python3.5/site-packages/pygame/tests/test_utils'...
Listing './lib/python3.5/site-packages/pygame/threads'...
Listing './lib/python3.5/site-packages/pygame-1.9.3.dist-info'...
Listing './lib/python3.5/site-packages/pyshark'...
Listing './lib/python3.5/site-packages/pyshark/capture'...
Listing './lib/python3.5/site-packages/pyshark/packet'...
Listing './lib/python3.5/site-packages/pyshark/tshark'...
Listing './lib/python3.5/site-packages/pyshark-0.3.7.11.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/trollius'...
Listing './lib/python3.5/site-packages/trollius-1.0.4.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
